manifests/files/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: files
  labels:
    app: files
spec:
  ports:
    - port: 80
      protocol: TCP
      name: http
  selector:
    app: files
